{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "18ebf699-408c-40e2-98aa-eb75e25bf764",
            "actions": [
                {
                    "name": "ForwardMovement",
                    "type": "PassThrough",
                    "id": "2483d2d6-d5aa-431b-b7b5-e99a7d6dfa58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SideMovement",
                    "type": "PassThrough",
                    "id": "3aaa4b07-6379-4e5c-b946-b7b2a891aa0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "555c9edc-7258-471e-b11d-1c67b4786a51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Forward",
                    "id": "4ee664fb-17ef-49fc-93cf-a98acca99f5f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "0602bb14-9302-43c0-b8dc-793913e770f4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "b92aff59-fcf3-45c2-ae40-7f1dfd5e3c1f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Side",
                    "id": "97fd4be7-23ce-4988-9af8-b729ee8ab1a0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c1e21590-c191-4311-acd0-cef5554cf015",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "92fc1eb3-0a39-4395-9b2e-cea4bf1ed235",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "7c93694d-d9d6-49d6-a4ad-0d989db96f35",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e2f8f009-0330-474d-a0fa-90595d4250e4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5021cb27-4080-4e3e-b7e7-1cb71a060511",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}